--- a/01_Fundamentals/eindopdracht/eindopdracht-lex/scss/components/_navbar.scss
+++ b/01_Fundamentals/eindopdracht/eindopdracht-lex/scss/components/_navbar.scss
@@ -46,6 +46,12 @@
       &~.navbar__list--mobile,
       &~.navbar__list--mobile li {
         transform: translateX(0);
+        width: 100vw;
+
+      }
+
+      &~.navbar__list--mobile {
+        padding-left: 50px;
       }
     }
   }
@@ -86,21 +92,21 @@
     position: absolute;
     background-color: $tg-color;
     padding-top: 10px;
-    padding-left: 50px;
     color: white;
-    width: 100%;
+    width: 0vw;
+    overflow: hidden;
     height: 100%;
     top: 65px;
     left: 0;
     z-index: 1;
     list-style-type: none;
     transition: transform 0.3s;
-    transform: translateX(100%);
+    transform: translateX(100vw);
 
     li {
       display: flex;
       align-items: baseline;
-      width: 100%;
+      // width: 100%;
       margin: 10px 0;
       transform: translateX(100%);
 
